Fix fanned cards overlapping above their row's height

--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -13,12 +13,11 @@ div.board {
     box-shadow: 0px 0px 2px rgba(0,0,0,0.5);
 }
 
-.card-size {
-    height: 15vw;
-}
+.card-size {height: 15vw;}
+.half-card-size {height: 7.5vw;}
 
 .overlapping-cards .card-size {
-    margin-top: -12vw;
+    margin-top: -13vw;
 }
 
 .card-face {
